Bug 67378 - Button to open more options in Search & replace dialog is too small, its label isn’t clickable
Summary: Button to open more options in Search & replace dialog is too small, its labe...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.0 target:4.1.1
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-26 22:05 UTC by Olivier R.
Modified: 2013-08-01 10:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of the tiny button (14.88 KB, image/png)
2013-07-26 22:05 UTC, Olivier R.
Details
screenshot of the dialog (14.88 KB, image/png)
2013-07-26 22:06 UTC, Olivier R.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier R. 2013-07-26 22:05:26 UTC
Created attachment 83067 [details]
screenshot of the tiny button

The button to open other options panel in the search&replace dialog is far too small, 5 pixels wide I assume. That’s far less than in previous versions of LO.

BTW, the label “More options is also too close to the previous label”.

See screenshot attached.
Comment 1 Olivier R. 2013-07-26 22:06:39 UTC
Created attachment 83068 [details]
screenshot of the dialog
Comment 2 m_a_riosv 2013-07-27 00:06:16 UTC
Hi Oliver, thanks for reporting.

I'm agree with you, near to invisible. Maybe time to change my glasses.

I think reordering a bit could be possible avoid the more button, with the same window size or a bit larger.
Comment 3 Adolfo Jayme Barrientos 2013-07-27 05:29:01 UTC
Confirmed. The main issue here is not the expander icon being small, the problem is that the expander’s label (“Autres options”) is not clickable. This is bad UX.
Comment 4 Commit Notification 2013-07-30 11:26:24 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5718ffbf0e3e68e43f87541ce0368a15de8ec90e

Resolves: fdo#67378 merge the label into the disclosure button



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-07-30 11:26:45 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c2ce9bf0c2bfd2b38262de8571257c8f02b076b4

Related: fdo#67378 rows missing HIG 6pixel spacing



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-07-31 15:52:11 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b3abb55edd5f6c3168882239df2b4b28dc96cfab&h=libreoffice-4-1

Resolves: fdo#67378 merge the label into the disclosure button


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.