Resolves: fdo#67378 merge the label into the disclosure button

(cherry picked from commit 479bba2cdcda8dbd86861ea62c8c25bfef633148)

(cherry picked from commit 06ac689a8d3887519d98a616f9a1727fcc7d0bf6)

(cherry picked from commit 5718ffbf0e3e68e43f87541ce0368a15de8ec90e)

Change-Id: I11c9a35e3d50a827127e4542a40f6f29580d4e8b
8b65b4986bf316e352131e737ebf736d91173d16
43df94c16a178c90da9c006565390a81c2fda29b

Related: fdo#67378 rows missing HIG 6pixel spacing

Change-Id: I6d4767c3159c1e9ebef19978a94ad994aab6ff4b
(cherry picked from commit c2ce9bf0c2bfd2b38262de8571257c8f02b076b4)
Reviewed-on: https://gerrit.libreoffice.org/5202
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>