include/vcl/layout.hxx
@@ -517,6 +517,23 @@ public:
     virtual Window *get_child();
     virtual const Window *get_child() const;
     virtual bool set_property(const OString &rKey, const OString &rValue);
+    bool get_expanded() const
+    {
+        return m_aDisclosureButton.IsChecked();
+    }
+    void set_expanded(bool bExpanded)
+    {
+        m_aDisclosureButton.Check(bExpanded);
+    }
+    void set_label(const OUString& rLabel)
+    {
+        m_aDisclosureButton.SetText(rLabel);
+    }
+    OUString get_label() const
+    {
+        return m_aDisclosureButton.GetText();
+    }
+    virtual void StateChanged(StateChangedType nType);
 protected:
     virtual Size calculateRequisition() const;
     virtual void setAllocation(const Size &rAllocation);
